--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^6.1.1",
-    "@mui/material": "^6.3.0",
+    "@mui/material": "^6.5.0",
+    "@mui/styled-engine-sc": "^7.2.0",
     "@mui/x-data-grid": "^7.23.5",
     "@mui/x-date-pickers": "^7.19.0",
     "axios": "^1.7.7",
@@ -27,6 +28,7 @@
     "react-router-dom": "^6.26.2",
     "react-to-print": "^3.0.2",
     "socket.io-client": "^4.8.0",
+    "styled-components": "^6.1.19",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
